# dicer

./: .gitignore  Cargo.toml
examples/: multiple_dice.rs  nested_sets.rs  single_die.rs
src/: lib.rs
