[package]
name = "dicer"
version = "0.1.0"
authors = ["Ian Burns <iwburns8@gmail.com>"]

[dependencies]
rand = "0.3.*"

[[example]]
name = "single_die"
path = "examples/single_die.rs"

[[example]]
name = "multiple_dice"
path = "examples/multiple_dice.rs"

[[example]]
name = "nested_sets"
path = "examples/nested_sets.rs"
